# m68k

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/m68k-asm/: Cargo.toml
crates/m68k-asm/src/: amiga_hunk_writer.rs  assembler.rs  directives.rs  ea_encode.rs  enc_bitfield.rs  enc_flow.rs  enc_fpu.rs  enc_logic.rs  enc_math.rs  enc_mmu.rs  enc_move.rs  encoder.rs  ieee695.rs  lib.rs  output.rs
crates/m68k-asm/tests/: golden_assembler.rs  golden_encoder.rs
crates/m68k-cli/: Cargo.toml
crates/m68k-cli/src/: lib.rs
crates/m68k-core/: Cargo.toml
crates/m68k-core/src/: addressing.rs  amiga_hunk.rs  ea_categories.rs  errors.rs  expr.rs  floats.rs  lib.rs  opcodes.rs  operands.rs  tokens.rs  utils.rs
crates/m68k-disasm/: Cargo.toml
crates/m68k-disasm/src/: decoder.rs  disassembler.rs  lib.rs
crates/m68k-floppy/: Cargo.toml
crates/m68k-floppy/src/: adf.rs  factory.rs  floppy_base.rs  ipf.rs  lib.rs  mfm.rs  uae.rs
tests/data/: all_forms.s
tests/golden/: vectors.json
